mikec/tests/PASS/base/arrays/6.mc
/* initialize array*/
int main(){
    int g[] = {1};
    
}
