mikec/tests/FAIL/assign/15.mc
/* initialize int and char in one array */
int main()
{
    int arr[2];

    arr[0] = 4;
    arr[1] = 'c';
}